# robt492_capstone_project_2

./: JoyLocal_udp.py  README.md
controller_ws/install/: local_setup.sh  setup.sh
controller_ws/log/: latest_build
controller_ws/src/my_python_pkg/: package.xml  (+1 more)
controller_ws/src/wheelchair_description/: CMakeLists.txt  package.xml
controller_ws/src/wheelchair_description/config/: controller.yaml  diff_drive_controller.yaml  ekf_localization.yaml  gz_bridge.yaml  nav2_params.yaml  nav2_params2.yaml  robot_localization.yaml  wheelchair.yaml
controller_ws/src/wheelchair_description/launch/: rtab_sim_demo.launch.py  simulation.launch.py  spawn_robot.launch.py  state_robot_publisher.launch.py  wheelchair_visualize.launch.py
controller_ws/src/wheelchair_description/meshes/: backcam.dae  backwheel_r.dae  base_link.dae  base_link3.STL  camera.STL  frontcam.dae  frontsupport_l.dae  frontsupport_r.dae  frontwheel_l.dae  frontwheel_r.dae  imu.dae  wheel1.STL  wheel2.STL  wheel3.STL  wheel4.STL  wheelchair.srdf
controller_ws/src/wheelchair_description/meshes/worlds/: empty_world.world  harmonic.sdf  industrial-warehouse.sdf  industrial_warehouse.sdf  simple.world  world_dynamic.world
controller_ws/src/wheelchair_description/src/: cmd_vel_republisher.py  nav2_simulations.launch.py  nav_through_poses_demo.py
controller_ws/src/wheelchair_description/urdf/: rtab.rviz  urdf.rviz  wcurdf.urdf  wheelchair.gazebo  wheelchair.urdf  wheelchair.xacro  wheelchair_body.urdf  wheelchair_calibration.urdf  wheelchair_depthcamera.urdf  wheelchair_full.urdf  wheelchair_gazebo.urdf
(+137 files in other folders)
